Fix line too long in code div

--- a/template/default/static/css/style.css
+++ b/template/default/static/css/style.css
@@ -91,6 +91,11 @@ a:hover { text-decoration: underline; }
 	margin-top: 3px;
 }
 
+pre
+{
+	width: 100%;
+	overflow-x: auto;
+}
 .codehilite
 {
 	background-color: #333333;
